--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.26",
+    "typeorm-naming-strategies": "^4.1.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
